test/files/neg/choices.scala
object Test {
  def main(args: Array[String]): Unit = {
    
  }
}
